--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,8 @@ networks:
     driver: bridge
 
 services:
-
   redis:
-    image: redis:5
+    image: redis
     restart: unless-stopped
     hostname: redis
     networks:
@@ -18,7 +17,7 @@ services:
       - 6379
 
   postgres:
-    image: postgres:12
+    image: postgres:11-alpine
     restart: unless-stopped
     environment:
       POSTGRES_DB: superset
@@ -27,10 +26,6 @@ services:
     hostname: postgres
     networks:
       - superset
-    ports:
-      - 5432:5432
-    expose:
-      - 5432
 
   superset:
     build:
